@@ -40,7 +40,7 @@ __all__ = [ 'CONFIG', 'SB_INFO', 'VERSION', 'PROG_NAME', 'ID_NEW', 'ID_OPEN',
             'ID_USE_SOFTTABS', 'ID_DUP_LINE', 'ID_TRANSLATE',
             'I18N_PAGE', 'ID_GOTO_MBRACE', 'ID_HLCARET_LINE', 'ID_SHOW_SB',
             'ID_REVERT_FILE', 'ID_RELOAD_ENC', 'ID_DOCPROP', 'ID_PASTE_AFTER',
-            'ID_COLUMN_MODE', 'ID_PANELIST', 'ID_NEW_WINDOW']
+            'ID_COLUMN_MODE', 'ID_PANELIST', 'ID_NEW_WINDOW', 'ID_TOGGLE_FOLD']
 
 #---- Project Info ----#
 # The project info was moved to another module so it could be accessed
@@ -178,6 +178,7 @@ ID_SHELF         = wx.NewId()
 ID_PANELIST      = wx.NewId()
 ID_GOTO_LINE     = wx.NewId()
 ID_GOTO_MBRACE   = wx.NewId()
+ID_TOGGLE_FOLD   = wx.NewId()
 ID_NEXT_MARK     = wx.ID_FORWARD
 ID_PRE_MARK      = wx.ID_BACKWARD
 
